--- a/cards/finals.html
+++ b/cards/finals.html
@@ -1,4 +1,4 @@
-<md-toolbar md-colors="{background: 'brown-600', color: 'grey-A100'}">
+<md-toolbar md-colors="::{background: 'brown-600', color: 'grey-A100'}">
     <div class="md-toolbar-tools" flex>
         <md-icon md-font-icon="fa fa-{{ ::icon }} fa-fw"></md-icon>
         <span flex>Final Exams</span>
@@ -9,12 +9,12 @@
     <md-list>
         <md-list-item class="md-2-line" ng-repeat="final in $ls.finals | orderBy: 'date'" ng-click="null">
             <div class="md-list-item-text">
-                <h3>{{ $ls.courses[final.course].title || final.title }}</h3>
-                <p>{{ final.start }} -> {{ final.end }}</p>
+                <h3>{{ ::$ls.courses[final.course].title || final.title }}</h3>
+                <p>{{ ::final.start }} -> {{ ::final.end }}</p>
             </div>
             <div class="md-list-item-text align-right fixed-56-width">
-                <h3>{{ parseDate(final.date) | date: 'MMM, dd' }}</h3>
-                <p class="md-caption">{{ final.location }}</p>
+                <h3>{{ ::parseDate(final.date) | date: 'MMM, dd' }}</h3>
+                <p class="md-caption">{{ ::final.location }}</p>
             </div>
         </md-list-item>
     </md-list>
