--- a/dashboard.html
+++ b/dashboard.html
@@ -5,21 +5,21 @@
 <div ng-init="$ls.selected.dashboardCard = $ls.selected.dashboardCard || 'finals'" layout="row" flex>
     <div layout="column" flex="66" ng-if="$media('gt-xs')">
         <div layout="row" flex="60">
-            <card ng-repeat="card in cards[0]" template="card"></card>
+            <card ng-repeat="card in ::cards[0]" template="card"></card>
         </div>
         <div layout="row" flex="40">
-            <card ng-repeat="card in cards[2]" template="card"></card>
+            <card ng-repeat="card in ::cards[2]" template="card"></card>
         </div>
     </div>
     <card layout="column" flex-gt-xs="33" template="$media('gt-xs') ? cards[1] : $ls.selected.dashboardCard" dynamic="true"></card>
 </div>
 
 <md-nav-bar md-selected-nav-item="$ls.selected.dashboardCard" class="md-accent md-hue-3 md-whiteframe-4dp hide-gt-xs">
-    <md-nav-item ng-repeat="card in [].concat.apply([], cards)" class="fill-width"
-                 md-nav-click="$ls.selected.dashboardCard = card" name="{{ card }}" layout="column">
+    <md-nav-item ng-repeat="card in ::[].concat.apply([], cards)" class="fill-width"
+                 md-nav-click="$ls.selected.dashboardCard = card" name="{{ ::card }}" layout="column">
         <div layout="column">
-            <md-icon md-font-icon="fa fa-{{ $cards[card].icon }} fa-1x"></md-icon>
-            {{card}}
+            <md-icon md-font-icon="fa fa-{{ ::$cards[card].icon }} fa-1x"></md-icon>
+            {{ ::card }}
         </div>
     </md-nav-item>
 </md-nav-bar>
