--- a/account.html
+++ b/account.html
@@ -2,23 +2,23 @@
     <md-icon md-colors="::{color: 'grey-800'}" md-font-icon="fa fa-user-circle-o fa-3x"></md-icon>
     <div layout="column" layout-align="space-between">
         <b style="font-size: 20px">
-            {{ $ls.student.firstName }} {{ $ls.student.lastName }}
+            {{ ::$ls.student.firstName }} {{ ::$ls.student.lastName }}
         </b>
         <span>
-            {{ $ls.student.studentId }}@sharjah.ac.ae
+            {{ ::$ls.student.studentId }}@sharjah.ac.ae
         </span>
     </div>
 </div>
 <div layout-padding>
     <div layout="row">
         <md-icon md-colors="::{color: 'grey-800'}" md-font-icon="fa fa-certificate" style="font-size: 1.3em"></md-icon>
-        <span flex>{{ $ls.student.major }}</span>
+        <span flex>{{ ::$ls.student.major }}</span>
     </div>
     <div layout="row">
         <md-icon md-colors="::{color: 'grey-800'}" md-font-icon="fa fa-university"></md-icon>
-        <span flex>{{ $ls.student.college }}</span>
+        <span flex>{{ ::$ls.student.college }}</span>
     </div>
 </div>
-<span layout="row" md-colors="{background: 'grey-100'}">
+<span layout="row" md-colors="::{background: 'grey-100'}">
     <md-button ng-click="logout()" flex>Logout</md-button>
 </span>
