--- a/cards/deadlines.html
+++ b/cards/deadlines.html
@@ -1,4 +1,4 @@
-<md-toolbar md-colors="{background: 'orange-600', color: 'grey-A100'}">
+<md-toolbar md-colors="::{background: 'orange-600', color: 'grey-A100'}">
     <div class="md-toolbar-tools" flex>
         <md-icon md-font-icon="fa fa-{{ ::icon }} fa-fw"></md-icon>
         <span flex>Deadlines</span>
@@ -10,15 +10,15 @@
         <md-list-item class="md-2-line" ng-class="beforeDue(deadline.dueDate) ? 'removeable' : 'archived'"
                       ng-repeat="deadline in $ls.deadlines | filter: inCourse && {course: $ls.selected.course} | orderBy: ['!dueDate', 'dueDate']">
             <div class="md-list-item-text" flex>
-                <h3>{{ deadline.title }}</h3>
-                <p ng-if="!inCourse">{{ $ls.courses[deadline.course].title }}</p>
+                <h3>{{ ::deadline.title }}</h3>
+                <p ng-if="!inCourse">{{ ::$ls.courses[deadline.course].title }}</p>
             </div>
             <div class="md-list-item-text align-right">
-                <h3>{{ deadline.dueDate | timeDistance }}</h3>
-                <p class="md-caption">Due {{ (deadline.dueDate | date: 'shortTime') || "Not Specified" }}</p>
+                <h3>{{ ::deadline.dueDate | timeDistance }}</h3>
+                <p class="md-caption">Due {{ ::(deadline.dueDate | date: 'shortTime') || "Not Specified" }}</p>
             </div>
             <div class="md-secondary">
-                <md-button class="md-icon-button" submit="{{ deadline.courseId }}/{{ deadline.contentId }}/">
+                <md-button class="md-icon-button" submit="{{ ::deadline.courseId }}/{{ ::deadline.contentId }}/">
                     <md-icon md-font-icon="fa fa-upload fa-1x"></md-icon>
                     <input type="file" style="display: none" multiple>
                 </md-button>
