--- a/cards/grades.html
+++ b/cards/grades.html
@@ -1,4 +1,4 @@
-<md-toolbar md-colors="{background: 'teal-600', color: 'grey-A100'}">
+<md-toolbar md-colors="::{background: 'teal-600', color: 'grey-A100'}">
     <div class="md-toolbar-tools" flex>
         <md-icon md-font-icon="fa fa-{{ ::icon }} fa-fw"></md-icon>
         <span flex>Grades</span>
@@ -9,13 +9,13 @@
     <md-list>
         <md-list-item class="md-2-line" ng-repeat="grade in $ls.grades | orderBy: '-'" ng-click="null">
             <div class="md-list-item-text" flex>
-                <h3>{{ grade.title }}</h3>
-                <p>{{ $ls.courses[grade.course].title }}</p>
+                <h3>{{ ::grade.title }}</h3>
+                <p>{{ ::$ls.courses[grade.course].title }}</p>
             </div>
             <div class="md-secondary md-avatar-icon fix-icon" style="margin-right: 0"
-                 md-colors="{background: gradeColor(grade) + '-600', color: 'grey-50'}">
+                 md-colors="::{background: gradeColor(grade) + '-600', color: 'grey-50'}">
                 <span style="line-height: 28px; margin-left: -2px;">
-                    {{ grade.grade }}<sub style="font-size: 12px">/<sub>{{ grade.outOf }}</sub></sub>
+                    {{ ::grade.grade }}<sub style="font-size: 12px">/<sub>{{ ::grade.outOf }}</sub></sub>
                 </span>
             </div>
         </md-list-item>
