--- a/cards/updates.html
+++ b/cards/updates.html
@@ -1,4 +1,4 @@
-<md-toolbar md-colors="{background: 'green-600', color: 'grey-A100'}">
+<md-toolbar md-colors="::{background: 'green-600', color: 'grey-A100'}">
     <div class="md-toolbar-tools" flex>
         <md-icon md-font-icon="fa fa-{{ ::icon }} fa-fw"></md-icon>
         <span flex>Updates</span>
@@ -10,12 +10,12 @@
         <md-list-item class="md-2-line removeable"
                       ng-repeat="update in $ls.updates | filter: inCourse && {course: $ls.selected.course} | orderBy: '-time'">
             <div class="md-list-item-text">
-                <h3>{{ update.title }}</h3>
-                <p ng-if="!inCourse">{{ $ls.courses[update.course].title }}</p>
+                <h3>{{ ::update.title }}</h3>
+                <p ng-if="!inCourse">{{ ::$ls.courses[update.course].title }}</p>
             </div>
             <div class="md-list-item-text align-right">
-                <h3>{{ update.time | timeDistance }}</h3>
-                <p class="md-caption">{{ update.event }}</p>
+                <h3>{{ ::update.time | timeDistance }}</h3>
+                <p class="md-caption">{{ ::update.event }}</p>
             </div>
             <div class="md-secondary">
                 <md-button class="md-icon-button" ng-click="dismissUpdate(update.dismiss)">
