--- a/courses.html
+++ b/courses.html
@@ -1,7 +1,7 @@
 <script type="text/ng-template" id="courses">
     <md-select ng-model="$ls.selected.course" class="no-margin" flex-gt-xs="30" flex>
         <md-option ng-repeat="id in $ls.terms[$toolbar.term].courses" ng-value="id" ng-if="$ls.courses[id].title && id.length < 8">
-            {{ $ls.courses[id].title }}
+            {{ ::$ls.courses[id].title }}
         </md-option>
     </md-select>
 </script>
@@ -21,10 +21,10 @@
 </div>
 
 <md-nav-bar md-selected-nav-item="$ls.selected.coursesCard" class="md-accent md-hue-3 md-whiteframe-4dp hide-gt-xs">
-    <md-nav-item ng-repeat="card in cards" class="fill-width" md-nav-click="$ls.selected.coursesCard = card" name="{{ card }}">
+    <md-nav-item ng-repeat="card in ::cards" class="fill-width" md-nav-click="$ls.selected.coursesCard = card" name="{{ ::card }}">
         <div layout="column">
-            <md-icon md-font-icon="fa fa-{{ $cards[card].icon }} fa-1x"></md-icon>
-            {{card}}
+            <md-icon md-font-icon="fa fa-{{ ::$cards[card].icon }} fa-1x"></md-icon>
+            {{ ::card }}
         </div>
     </md-nav-item>
 </md-nav-bar>
