--- a/email.html
+++ b/email.html
@@ -6,25 +6,25 @@
     <md-card ng-if="$media('gt-xs') || $ls.emailsAction == 'select'" flex-gt-xs="33" flex>
         <md-content layout="row" flex>
             <md-tabs md-selected="$ls.selected.tab" flex>
-                <md-tab ng-repeat="tab in tabs" ng-click="getEmails(tab)">
+                <md-tab ng-repeat="tab in ::tabs" ng-click="getEmails(tab)">
                     <md-tab-label>
-                        <md-icon md-font-icon="fa fa-{{ icons[tab] }} fa-fw"></md-icon>
-                        {{ tab.capitalize() }}
+                        <md-icon md-font-icon="fa fa-{{ ::icons[tab] }} fa-fw"></md-icon>
+                        {{ ::tab.capitalize() }}
                     </md-tab-label>
                     <md-tab-body>
                         <md-list flex>
                             <md-list-item ng-repeat="email in $ls.emails[tab] | orderBy: '-time'" ng-click="$ls.emailsAction = 'view'; openEmail(tab, email.id)"
                                           md-colors="isSelected(tab, email.id) && {background: 'accent-A100'}" class="md-2-line">
-                                <div ng-if="tab != 'events'" class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}" style="min-width: 36px">
-                                    {{ getInitials(email.sender || email.course) }}
+                                <div ng-if="tab != 'events'" class="md-avatar-icon fix-icon" md-colors="::{background: 'blue-grey-400'}" style="min-width: 36px">
+                                    {{ ::getInitials(email.sender || email.course) }}
                                 </div>
                                 <div class="md-list-item-text">
-                                    <h3>{{ email.title || "No Title" }}</h3>
-                                    <p>{{ email.sender || email.course }}</p>
+                                    <h3>{{ ::email.title || "No Title" }}</h3>
+                                    <p>{{ ::email.sender || email.course }}</p>
                                 </div>
                                 <div class="md-list-item-text align-right">
-                                    <h3>{{ email.time | timeDistance }}</h3>
-                                    <p class="md-caption">{{ email.event }}</p>
+                                    <h3>{{ ::email.time | timeDistance }}</h3>
+                                    <p class="md-caption">{{ ::email.event }}</p>
                                 </div>
                             </md-list-item>
                         </md-list>
