--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<md-dialog flex="25" flex-xs="80" flex-sm="50" md-colors="{background: 'default-grey-A100'}">
+<md-dialog flex="25" flex-xs="80" flex-sm="50" md-colors="::{background: 'default-grey-A100'}">
     <form layout="column" class="no-margin" ng-submit="submit({sid, pin})">
         <md-toolbar>
             <div class="md-toolbar-tools" flex>
