Use Special Text Commas And Reduce Zoom On Small Screens

--- a/calendar.html
+++ b/calendar.html
@@ -12,6 +12,6 @@
         ng-model="selectedDate"
         week-starts-on="6"
         tooltips="false"
-        day-format="$ls.selected.calDir == 'vertical' ? 'EEE, d' : 'd'"
+        day-format="$ls.selected.calDir == 'vertical' ? 'EEE‚ d' : 'd'"
         day-content="setDayContent"></calendar-md>
 </md-card>
