--- a/cards/finals.html
+++ b/cards/finals.html
@@ -13,7 +13,7 @@
                 <p>{{ ::final.start }} -> {{ ::final.end }}</p>
             </div>
             <div class="md-list-item-text align-right fixed-56-width">
-                <h3>{{ ::parseDate(final.date) | date: 'MMM, dd' }}</h3>
+                <h3>{{ ::parseDate(final.date) | date: 'MMM‚ dd' }}</h3>
                 <p class="md-caption">{{ ::final.location }}</p>
             </div>
         </md-list-item>
