--- a/cards/holds.html
+++ b/cards/holds.html
@@ -14,7 +14,7 @@
                 <p>{{ ::hold.type }}</p>
             </div>
             <div class="md-list-item-text" style="max-width: 60px; text-align: center">
-                <h3>{{ ::parseDate(hold.end) | date: 'MMM, dd' }}</h3>
+                <h3>{{ ::parseDate(hold.end) | date: 'MMM‚ dd' }}</h3>
                 <p>{{ ::parseDate(hold.end) | date: 'yyyy' }}</p>
             </div>
         </md-list-item>
