--- a/welcome.html
+++ b/welcome.html
@@ -4,8 +4,8 @@
     </div>
     <div layout-gt-xs="row" layout-xs="column" flex>
         <div id="welcome-text" layout="column" flex-gt-xs="40" flex-xs="noshrink" flex-order-xs="2" layout-padding>
-            <p md-colors="::{color: 'primary'}">By Students, For Students</p>
-            <span>This will revolutionize your experience with UOS websites and combines all of them in one place (Blackboard, MyUDC, Email and Academic Calendar)</span>
+            <p md-colors="::{color: 'primary'}">By Students‚ For Students</p>
+            <span>This will revolutionize your experience with UOS websites and combines all of them in one place (Blackboard‚ MyUDC‚ Email and Academic Calendar)</span>
             <md-button class="md-raised md-primary" layout-padding login>Get Started</md-button>
         </div>
         <div layout="column" flex-gt-xs="60" flex-xs="noshrink" flex-order-xs="1">
