Rename Email Page To Emails Page Everywhere In The Project

--- a/emails.html
+++ b/emails.html
@@ -1,4 +1,4 @@
-<script type="text/ng-template" id="email">
+<script type="text/ng-template" id="emails">
     <md-button class="md-accent md-hue-2 no-margin" ng-click="$ls.emailsAction = 'write'">Write a new Email</md-button>
 </script>
 
