--- a/includes.html
+++ b/includes.html
@@ -8,7 +8,7 @@
             <link rel="stylesheet" href="/static/css/dashboard.css">
             <link rel="stylesheet" href="/static/css/schedule.css">
             <link rel="stylesheet" href="/static/css/courses.css">
-            <link rel="stylesheet" href="/static/css/email.css">
+            <link rel="stylesheet" href="/static/css/emails.css">
             <link rel="stylesheet" href="/static/css/calendar.css">
             <link rel="stylesheet" href="/static/css/notfound.css">
             <link rel="stylesheet" href="/static/css/account.css">
@@ -27,7 +27,7 @@
             <script src="/static/js/dashboard.js"></script>
             <script src="/static/js/schedule.js"></script>
             <script src="/static/js/courses.js"></script>
-            <script src="/static/js/email.js"></script>
+            <script src="/static/js/emails.js"></script>
             <script src="/static/js/calendar.js"></script>
             <script src="/static/js/notfound.js"></script>
             <script src="/static/js/account.js"></script>
