--- a/cards/documents.html
+++ b/cards/documents.html
@@ -13,17 +13,15 @@
 
 <md-content>
     <md-list>
-        <md-list-item ng-repeat="document in $ls.documents | filter: {'course': $ls.selected.course} | orderBy: 'uploadDate' | limitTo: 25"
-                      class="md-2-line documents" ng-click="openFile(document)">
+        <md-list-item ng-repeat="document in $ls.documents | filter: {'course': $ls.selected.course} | orderBy: 'uploadDate'"
+                      class="md-2-line documents" ng-click="selected = mass ? !selected : downloadFile(document.url)">
             <div class="md-list-item-text" flex>
                 <h3>{{ ::document.title }}</h3>
                 <p>{{ ::document.file }}</p>
             </div>
-            <div class="md-list-item-text fixed-56-width download">
-                <md-button ng-hide="mass" ng-href="{{ ::document.url }}" download="{{ ::document.file }}" name="{{ ::document.file }}" class="md-icon-button">
-                    <md-icon md-font-icon="fa fa-download fa-2x"></md-icon>
-                </md-button>
-                <md-checkbox ng-show="mass" ng-checked="all" class="md-accent md-hue-3" style="margin: 16px" flex></md-checkbox>
+            <div class="md-list-item-text fixed-56-width">
+                <md-checkbox ng-checked="all || selected" class="md-accent md-hue-3 document-checkbox"
+                             href="{{ ::document.url }}" style="margin: 16px" ng-show="mass" flex></md-checkbox>
             </div>
         </md-list-item>
     </md-list>
