Move Cards Colors From View To Cards Controller For Later Use

--- a/cards/deadlines.html
+++ b/cards/deadlines.html
@@ -1,4 +1,4 @@
-<md-toolbar md-colors="::{background: 'orange-600', color: 'grey-A100'}">
+<md-toolbar md-colors="::{color: 'grey-A100'}">
     <div class="md-toolbar-tools" flex>
         <md-icon md-font-icon="fa fa-{{ ::icon }} fa-fw"></md-icon>
         <span flex>Deadlines</span>
