--- a/cards/documents.html
+++ b/cards/documents.html
@@ -1,4 +1,4 @@
-<md-toolbar md-colors="::{background: 'brown-600'}">
+<md-toolbar>
     <div class="md-toolbar-tools" flex>
         <md-icon md-font-icon="fa fa-{{ ::icon }} fa-fw"></md-icon>
         <span flex>Documents</span>
