--- a/cards/courses.html
+++ b/cards/courses.html
@@ -1,4 +1,4 @@
-<md-toolbar md-colors="::{background: 'purple-500', color: 'grey-A100'}">
+<md-toolbar md-colors="::{color: 'grey-A100'}">
     <div class="md-toolbar-tools" flex>
         <md-icon md-font-icon="fa fa-{{ ::icon }} fa-fw"></md-icon>
         <span flex>Courses</span>
