--- a/layout.html
+++ b/layout.html
@@ -21,7 +21,7 @@
     <body ng-controller="layout" layout="row" md-colors="::{background: 'accent-50'}">
         <div class="background-pattern" ng-if="currentPage == 'welcome'"><i></i></div>
         <md-sidenav id="sidenav" class="md-sidenav-left md-whiteframe-1dp" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="sidenav"
-                    layout="column" ng-class="{'open': $ls.loggedIn, 'tight': $ls.loggedIn && $ls.selected.tightNav && $media('gt-sm')}">
+                    layout="column" ng-class="{'open': $ls.session, 'tight': $ls.session && $ls.selected.tightNav && $media('gt-sm')}">
             <md-toolbar layout="row" layout-align="start center" md-colors="::{background: 'grey-A100'}" ng-click="goto('/')">
                 <md-icon md-svg-icon="logo" md-colors="::{fill: 'accent-800'}"></md-icon>
                 <b md-colors="::{color: 'accent-800'}">UOS</b>
@@ -42,23 +42,23 @@
         <md-content layout="column" style="background: rgba(0, 0, 0, 0)" flex>
             <md-toolbar md-whiteframe="1" md-colors="::{background: 'grey-A100'}">
                 <div class="md-toolbar-tools" id="toolbar" layout="row">
-                    <md-button ng-show="$ls.loggedIn" class="md-icon-button md-accent md-hue-3"
+                    <md-button ng-show="$ls.session" class="md-icon-button md-accent md-hue-3"
                                ng-click="toggleSidenav(true)">
                         <md-icon md-font-icon="fa fa-bars fa-lg"></md-icon>
                     </md-button>
-                    <md-button ng-hide="$ls.loggedIn" class="md-accent md-hue-2" ng-click="goto('calendar')">Academic Calendar</md-button>
+                    <md-button ng-hide="$ls.session" class="md-accent md-hue-2" ng-click="goto('calendar')">Academic Calendar</md-button>
                     <ng-include src="hasToolbar && currentPage" layout="row" flex></ng-include>
                     <div ng-hide="hasToolbar" flex></div>
-                    <span ng-show="$ls.loggedIn" md-colors="::{color: 'grey-800'}" account>
+                    <span ng-show="$ls.session" md-colors="::{color: 'grey-800'}" account>
                         <md-icon md-colors="::{color: 'grey-800'}" md-font-icon="fa fa-user-circle-o"></md-icon>
                         {{ ::$ls.student.firstName }} <span hide-xs>{{ ::$ls.student.lastName }}</span>
                     </span>
-                    <md-button ng-hide="$ls.loggedIn" class="md-primary md-hue-2" login>Login</md-button>
+                    <md-button ng-hide="$ls.session" class="md-primary md-hue-2" login>Login</md-button>
                 </div>
             </md-toolbar>
             <div id="content" layout="row" flex>
                 <ng-view layout="column" flex ng-cloak></ng-view>
-                <div id="right-margin" ng-class="{'inflate': !$ls.loggedIn && $media('gt-sm')}"></div>
+                <div id="right-margin" ng-class="{'inflate': !$ls.session && $media('gt-sm')}"></div>
             </div>
         </md-content>
     </body>
