--- a/schedule.html
+++ b/schedule.html
@@ -1,5 +1,5 @@
 <script type="text/ng-template" id="schedule">
-    <md-select ng-model="$ls.selected.term" ng-click="$toolbar.getTerms()" class="no-margin" flex-gt-xs="30" flex>
+    <md-select ng-model="$ls.selected.term" ng-click="$toolbar.getTerms()" class="no-margin" flex-xs="100">
         <md-option ng-repeat="term in $toolbar.orderTerms($ls.terms)" ng-bind-html="::$toolbar.termTitle(term)"
                    ng-click="$toolbar.getSchedule(term)" ng-value="term"></md-option>
     </md-select>
