Add Manifest And Worker As First Step To Make The Website PWA

--- a/includes.html
+++ b/includes.html
@@ -1,4 +1,5 @@
 {% load compress %}
+        <link rel="manifest" href="/static/manifest.json">
         <!-- Angular Material, Font Awesome Icon Pack & Roboto Font -->
         <link rel="stylesheet" href="/static/min/css/requirements.css">
         <!-- Our Style Sheets -->
