--- a/layout.html
+++ b/layout.html
@@ -1,5 +1,6 @@
 <html ng-app="UOSHUB" ng-cloak ng-strict-di>
     <head>
+        <meta name="theme-color" content="#2E7D32"/>
         <meta name="author" content="Omar Einea">
         <meta name="description" content="The Unified Hub of UOS Websites">
         <meta name="keywords" content="University of Sharjah, UOS, uos udc, uos bb, uos email">
