Adopt To New Details API Data & Added Origin In Account

--- a/account.html
+++ b/account.html
@@ -2,11 +2,17 @@
     <md-icon md-colors="::{color: 'grey-800'}" md-font-icon="fa fa-user-circle-o fa-3x"></md-icon>
     <div layout="column" layout-align="space-between">
         <b style="font-size: 20px">
-            {{ ::$ls.student.firstName }} {{ ::$ls.student.lastName }}
+            {{ ::$ls.student.name }}
         </b>
         <span>
             {{ ::$ls.student.studentId }}@sharjah.ac.ae
         </span>
+    </div>
+</div>
+<div layout-padding>
+    <div layout="row">
+        <md-icon md-colors="::{color: 'grey-800'}" md-font-icon="fa fa-id-card"></md-icon>
+        <span flex>{{ ::$ls.student.origin }}</span>
     </div>
 </div>
 <div layout-padding>
