Fixed Loading Term For Non-Continued Students (e.g. Graduates)
- And many more fixes

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,5 @@
 <script type="text/ng-template" id="dashboard">
-    <span ng-bind-html="::$toolbar.termTitle($toolbar.thisTerm)"></span>
+    <span ng-bind-html="$toolbar.termTitle($toolbar.thisTerm)"></span>
 </script>
 
 <div layout="row" flex>
